changes dyal lundi meeting

--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -121,7 +121,7 @@
             </div>
             <div class="pdv-info-container">
                 <div class="pdv-img">
-                    <img src="{{data.properties.NPCP}}" alt="" (click)="openImage(data.properties.PVP)">
+                    <img src="{{data.properties.NFCP}}" alt="" (click)="openImage(data.properties.NFCP)">
                 </div>
                 <div class="pdv-info">
                     <label>Code NFC:</label>
