--- a/frontend/src/app/update-client/update-client.component.css
+++ b/frontend/src/app/update-client/update-client.component.css
@@ -1,6 +1,16 @@
 @media (min-width: 1200px){
 
 
+    .nfc-div{
+        display: flex;
+        flex-flow: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .nfc-div span{
+        font-weight: bold;
+    }
     .progress-cantainer{
         position: relative; 
         width: 500px;
