--- a/frontend/src/app/offline/offline.component.css
+++ b/frontend/src/app/offline/offline.component.css
@@ -11,6 +11,19 @@
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
+.containe-idss{
+    display: flex;
+    padding: 20px;
+    margin: 20px;
+    flex-flow: column wrap ;
+    background-color: #fff;
+    justify-content: flex-start ;
+    align-items: center;
+    gap: 10px 20px; 
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
 
 .btn-green{
     background-color: #27AE61;
