--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -94,7 +94,7 @@
     </mat-dialog-content>
 
     <mat-dialog-actions class="action-btns" align="center">
-        <button mat-raised-button color="primary" class="btn-green">Update Client</button>
+        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()" >Update Client</button>
         <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
         <button mat-raised-button color="primary" class="btn-orange">Navigate to the client</button>
     </mat-dialog-actions>
