change from lat long to id

--- a/frontend/src/app/offline/offline.component.css
+++ b/frontend/src/app/offline/offline.component.css
@@ -5,25 +5,12 @@
     margin: 20px;
     flex-flow: column wrap ;
     background-color: #fff;
-    justify-content: flex-start ;
-    align-items: center;
+    justify-content: center ;
+    align-items: flex-start;
     gap: 10px 20px; 
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
-.containe-idss{
-    display: flex;
-    padding: 20px;
-    margin: 20px;
-    flex-flow: column wrap ;
-    background-color: #fff;
-    justify-content: flex-start ;
-    align-items: center;
-    gap: 10px 20px; 
-    border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-}
-
 
 .btn-green{
     background-color: #27AE61;
@@ -38,4 +25,10 @@
     text-align: center;
     width:100px;
     height: 30px;
+  }
+
+  .clients-div{
+      display: flex;
+      flex-flow: row wrap;
+      gap: 10px;
   }
