--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -1,12 +1,14 @@
 <div *ngIf="loggedUser.role == 'Back Office' || loggedUser.role == 'Admin'">
- {{data._id}}
- <div *ngIf="data.geometry.properties.status=='green', else refused">
-     <span style="color: green;">Client Validated</span>
- </div>
- <ng-template #refused>
-    <span style="color: red;">Client Not validated</span>
- </ng-template>
- 
+    {{data._id}}
+    <div *ngIf="data.geometry.properties.status=='green', else refused">
+        <span style="color: green;">Client Validated</span>
+    </div>
+    <ng-template #refused>
+        <span style="color: red;">Client Not validated</span>
+    </ng-template>
+
+
+
     <mat-dialog-content>
         <div class="dialog-container">
             <div class="aud-sell-container">
@@ -14,94 +16,122 @@
                     <span>Seller</span>
                     <div class="pdv-info-container">
                         <div class="pdv-img">
-                            <img *ngIf="clientOfSeller.PVP" src="{{clientOfSeller.PVP}}" alt="" (click)="openImage(clientOfSeller.PVP)">
-                            <img *ngIf="!clientOfSeller.PVP" src="assets/images/blank.jpg" alt="" (click)="openImage(clientOfSeller.PVP)">
+                            <img *ngIf="clientOfSeller?.PVP" src="{{clientOfSeller?.PVP}}" alt=""
+                                (click)="openImage(clientOfSeller?.PVP)">
+                            <img *ngIf="!clientOfSeller?.PVP" src="assets/images/blank.jpg" alt=""
+                                (click)="openImage(clientOfSeller?.PVP)">
                         </div>
                         <div class="pdv-info">
-                            <label>Sector:</label> 
-                            <p>{{clientOfSeller.Code_Secteur_OS}}</p>
-                            <label>Name:</label> 
-                            <p>{{clientOfSeller.NomPrenom}}</p>
-                            <label>Phone Number:</label> 
-                            <p>{{clientOfSeller.PhoneNumber}}</p>
+                            <label>Sector:</label>
+                            <p>{{clientOfSeller?.Code_Secteur_OS}}</p>
+                            <label>Name:</label>
+                            <p>{{clientOfSeller?.NomPrenom}}</p>
+                            <label>Phone Number:</label>
+                            <p>{{clientOfSeller?.PhoneNumber}}</p>
                             <label>Type PDV:</label>
-                            <p>{{ clientOfSeller.TypeDPV}}, {{clientOfSeller.detailType}}</p>
+                            <p>{{ clientOfSeller?.TypeDPV}}, {{clientOfSeller?.detailType}}</p>
                         </div>
                     </div>
                     <div class="pdv-action-btns">
                         <!-- <button mat-button class="btn-valid" (click)="validateSeller()">Valid</button>
-                        <button mat-button class="btn-refus">Refus</button> -->
+    <button mat-button class="btn-refus">Refus</button> -->
                     </div>
                 </section>
                 <section class="aud-container">
                     <span>Auditor</span>
                     <div class="pdv-info-container">
                         <div class="pdv-img">
-                            <img *ngIf="clientOfAuditor.PVP" src="{{clientOfAuditor.PVP}}" alt="" (click)="openImage(clientOfAuditor.PVP)">
-                            <img *ngIf="!clientOfAuditor.PVP" src="assets/images/blank.jpg" alt="" (click)="openImage(clientOfAuditor.PVP)">
+                            <img *ngIf="clientOfAuditor?.PVP" src="{{clientOfAuditor?.PVP}}" alt=""
+                                (click)="openImage(clientOfAuditor?.PVP)">
+                            <img *ngIf="!clientOfAuditor?.PVP" src="assets/images/blank.jpg" alt=""
+                                (click)="openImage(clientOfAuditor?.PVP)">
                         </div>
                         <div class="pdv-info">
-                            <label>Sector:</label> 
-                            <p>{{clientOfAuditor.Code_Secteur_OS}}</p>
-                            <label>Name:</label> 
-                            <p>{{clientOfAuditor.NomPrenom}}</p>
-                            <label>Phone Number:</label> 
-                            <p>{{clientOfAuditor.PhoneNumber}}</p>
+                            <label>Sector:</label>
+                            <p>{{clientOfAuditor?.Code_Secteur_OS}}</p>
+                            <label>Name:</label>
+                            <p>{{clientOfAuditor?.NomPrenom}}</p>
+                            <label>Phone Number:</label>
+                            <p>{{clientOfAuditor?.PhoneNumber}}</p>
                             <label>Type PDV:</label>
-                            <p>{{ clientOfAuditor.TypeDPV}}, {{clientOfAuditor.detailType}}</p>
+                            <p>{{ clientOfAuditor?.TypeDPV}}, {{clientOfAuditor?.detailType}}</p>
                         </div>
                     </div>
                     <div class="pdv-action-btns" *ngIf="data.geometry.properties.status !='green'">
                         <button mat-button class="btn-valid" (click)="validate(data._id,'green')">Valid</button>
                         <button mat-button class="btn-refus" (click)="validate(data._id,'black')">Refus</button>
                     </div>
-                    
+
+
+
                 </section>
             </div>
             <div class="validPDV-container">
                 <span>Validated Client</span>
 
+
+
+
+
                 <section class="valid-pdv-container">
                     <div class="pdv-info-container">
                         <div class="pdv-img">
-                            <img *ngIf="data.geometry.properties.PVP" src="{{data.geometry.properties.PVP}}" alt="" (click)="openImage(data.geometry.properties.PVP)">
-                            <img *ngIf="!data.geometry.properties.PVP" src="assets/images/blank.jpg" alt="" (click)="openImage(data.geometry.properties.PVP)">
+                            <img *ngIf="data.geometry.properties.PVP" src="{{data.geometry.properties.PVP}}" alt=""
+                                (click)="openImage(data.geometry.properties.PVP)">
+                            <img *ngIf="!data.geometry.properties.PVP" src="assets/images/blank.jpg" alt=""
+                                (click)="openImage(data.geometry.properties.PVP)">
                         </div>
                         <div class="pdv-info">
-                            <label>Sector:</label> 
+                            <label>Sector:</label>
                             <p>{{data.geometry.properties.Code_Secteur_OS}}</p>
-                            <label>Name:</label> 
+                            <label>Name:</label>
                             <p>{{data.geometry.properties.NomPrenom}}</p>
-                            <label>Phone Number:</label> 
+                            <label>Phone Number:</label>
                             <p>{{data.geometry.properties.PhoneNumber}}</p>
                             <label>Type PDV:</label>
                             <p>{{ data.geometry.properties.TypeDPV}}, {{data.geometry.properties.detailType}}</p>
                         </div>
                     </div>
-                    <div class="pdv-info-container" >
+                    <div class="pdv-info-container">
                         <div class="pdv-img">
-                            <img *ngIf="data.geometry.properties.NFCP" src="{{data.geometry.properties.NFCP}}" alt="" (click)="openImage(data.geometry.properties.NFCP)">
-                            <img *ngIf="!data.geometry.properties.NFCP" src="assets/images/blank.jpg" alt="" (click)="openImage(data.geometry.properties.NFCP)">
+                            <img *ngIf="data.geometry.properties.NFCP" src="{{data.geometry.properties.NFCP}}" alt=""
+                                (click)="openImage(data.geometry.properties.NFCP)">
+                            <img *ngIf="!data.geometry.properties.NFCP" src="assets/images/blank.jpg" alt=""
+                                (click)="openImage(data.geometry.properties.NFCP)">
                         </div>
                         <div class="pdv-info">
-                            <label>NFC UUID:</label> 
+                            <label>NFC UUID:</label>
                             <p>{{data.geometry.properties.nfc.UUID}}</p>
-                            <label>NFC code Qr:</label> 
+                            <label>NFC code Qr:</label>
                             <p>{{data.geometry.properties.codeQR}}</p>
                         </div>
                     </div>
                 </section>
+
+
+
+
 
             </div>
         </div>
         <!-- <p> {{data.NomPrenom}}</p> -->
     </mat-dialog-content>
 
+
+
+
+
     <mat-dialog-actions class="action-btns" align="center">
-        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()" >Update Client</button>
+        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()">Update Client</button>
         <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
-        <button mat-raised-button color="primary" class="btn-orange" (click)="navigateToMap(data.geometry.geometry.coordinates[1],data.geometry.geometry.coordinates[0])">Navigate to the client</button>
+        <button mat-raised-button color="primary" class="btn-orange"
+            (click)="navigateToMap(data.geometry.geometry.coordinates[1],data.geometry.geometry.coordinates[0])">Navigate
+            to the client</button>
     </mat-dialog-actions>
+
+
+
+
 
 </div>
 <div *ngIf="loggedUser.role == 'Seller' || loggedUser.role == 'Auditor'">
@@ -110,15 +140,17 @@
         <section fxLayout="column" fxLayoutAlign="center">
             <div class="pdv-info-container">
                 <div class="pdv-img">
-                    <img *ngIf="data.geometry.properties.PVP" src="{{data.geometry.properties.PVP}}" alt="" (click)="openImage(data.geometry.properties.PVP)">
-                    <img *ngIf="!data.geometry.properties.PVP" src="assets/images/blank.jpg" alt="" (click)="openImage(data.geometry.properties.PVP)">
+                    <img *ngIf="data.geometry.properties.PVP" src="{{data.geometry.properties.PVP}}" alt=""
+                        (click)="openImage(data.geometry.properties.PVP)">
+                    <img *ngIf="!data.geometry.properties.PVP" src="assets/images/blank.jpg" alt=""
+                        (click)="openImage(data.geometry.properties.PVP)">
                 </div>
                 <div class="pdv-info">
-                    <label>Sector:</label> 
+                    <label>Sector:</label>
                     <p>{{data.geometry.properties.Code_Secteur_OS}}</p>
-                    <label>Name:</label> 
+                    <label>Name:</label>
                     <p>{{data.geometry.properties.NomPrenom}}</p>
-                    <label>Phone Number:</label> 
+                    <label>Phone Number:</label>
                     <p>{{data.geometry.properties.PhoneNumber}}</p>
                     <label>Type PDV:</label>
                     <p>{{ data.geometry.properties.TypeDPV}}, {{data.geometry.properties.detailType}}</p>
@@ -126,8 +158,10 @@
             </div>
             <div class="pdv-info-container">
                 <div class="pdv-img">
-                    <img *ngIf="data.geometry.properties.NFCP" src="{{data.geometry.properties.NFCP}}" alt="" (click)="openImage(data.geometry.properties.NFCP)">
-                    <img *ngIf="!data.geometry.properties.NFCP" src="assets/images/blank.jpg" alt="" (click)="openImage(data.geometry.properties.NFCP)">
+                    <img *ngIf="data.geometry.properties.NFCP" src="{{data.geometry.properties.NFCP}}" alt=""
+                        (click)="openImage(data.geometry.properties.NFCP)">
+                    <img *ngIf="!data.geometry.properties.NFCP" src="assets/images/blank.jpg" alt=""
+                        (click)="openImage(data.geometry.properties.NFCP)">
                 </div>
                 <div class="pdv-info">
                     <label>Code NFC:</label>
@@ -137,13 +171,19 @@
                     <p>{{data.geometry.properties.nfc.UUID}}</p>
                 </div>
             </div>
-            
+
+
+
         </section>
         <!-- <p>{{data.NomPrenom}}</p> -->
     </mat-dialog-content>
 
+
+
+
+
     <mat-dialog-actions class="action-btns" align="center">
-        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()" >Update Client</button>
-        <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
+        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()">Update Client</button>
+        <button mat-raised-button color="primary" class="btn-red" routerLink="/deleteClient">Delete Client</button>
     </mat-dialog-actions>
 </div>
