--- a/frontend/src/app/offline/offline.component.html
+++ b/frontend/src/app/offline/offline.component.html
@@ -1,18 +1,18 @@
 
 <div class="containe-ids">
-    <p>ADD CLIENT</p>
+    <p>Clients added waiting for sync</p>
     <div class="sync">
-        <div *ngFor="let uuid of id">
+        <div *ngFor="let uuid of id" class="clients-div">
             <label>{{uuid}}</label>
             <button mat-button class="btn-green" (click)="send(uuid)" >Send</button>
         </div>
         
     </div>   
 </div>
-<div class="containe-idss">
-    <p>UPDATE CLIENT</p>
-    <div class="syncc">
-        <div *ngFor="let uuidd of idsupdates">
+<div class="containe-ids">
+    <p>Clients updated waiting for sync</p>
+    <div class="sync">
+        <div *ngFor="let uuidd of idsupdates" class="clients-div">
             <label>{{uuidd}}</label>
             <button mat-button class="btn-green" (click)="sendupdate(uuidd)" >Send</button>
         </div>
