edit delete request

--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -185,6 +185,6 @@
 
     <mat-dialog-actions class="action-btns" align="center">
         <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()">Update Client</button>
-        <button mat-raised-button color="primary" class="btn-red" routerLink="/deleteClient">Delete Client</button>
+        <button mat-raised-button color="primary" class="btn-red" (click)="deleteRequest()">Delete Client</button>
     </mat-dialog-actions>
 </div>
