--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -1,5 +1,5 @@
 <label>{{data._id}}</label>
-<div *ngIf="loggedUser.role == 'Back Office' || loggedUser.role == 'Admin'">
+<div *ngIf="loggedUser.role == 'Back Office' || loggedUser.role == 'Admin' && data!='yes'">
     
     <div *ngIf="data.geometry.properties.status=='green', else refused">
         <span style="color: green;">Client Validated</span>
@@ -135,6 +135,7 @@
 
 
 </div>
+
 <div *ngIf="loggedUser.role == 'Seller' || loggedUser.role == 'Auditor'">
     <mat-dialog-content class="dialog-content">
         <h2>Client Information</h2>
@@ -188,3 +189,50 @@
         <button mat-raised-button color="primary" class="btn-red" (click)="deleteRequest()">Delete Client</button>
     </mat-dialog-actions>
 </div>
+
+<div *ngIf="data=='yes'">
+    <mat-dialog-content class="dialog-content">
+        <h2>Client Information</h2>
+        <section fxLayout="column" fxLayoutAlign="center">
+            <div class="pdv-info-container">
+                <div class="pdv-img">
+                    
+                    <img  src="assets/images/blank.jpg" alt=""
+                        (click)="openImage('assets/images/blank.jpg')">
+                </div>
+                <div class="pdv-info">
+                    <label>Sector:</label>
+                    <p>text</p>
+                    <label>Name:</label>
+                    <p>text</p>
+                    <label>Phone Number:</label>
+                    <p>text</p>
+                    <label>Type PDV:</label>
+                    <p>text</p>
+                </div>
+            </div>
+            <div class="pdv-info-container">
+
+                <div class="pdv-img">
+                    
+                    <img  src="assets/images/blank.jpg" alt=""
+                        (click)="openImage('assets/images/blank.jpg')">
+                </div>
+                <div class="pdv-info">
+                    <label>Reason:</label>
+                    <p>null</p>
+                </div>
+            </div>
+
+
+
+        </section>
+        <!-- <p>{{data.NomPrenom}}</p> -->
+    </mat-dialog-content>
+
+    <mat-dialog-actions class="action-btns" align="center">
+        <button mat-raised-button color="primary" class="btn-green" >Validate Supp</button>
+        <button mat-raised-button color="primary" class="btn-red" >Cancel Supp</button>
+    </mat-dialog-actions>
+</div>
+
