--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -54,7 +54,7 @@
             <div class="scan-field" *ngIf="selected=='Not exist'">
                 <label class="input-label">PDV location video : </label>
                 <div>
-                    <button mat-button class="btn-green" *ngIf="!isRecording" (click)="startRecording()">Record Video</button>
+                    <button matbutton class="btn-green" *ngIf="!isRecording" (click)="startRecording()">Record Video</button>
                 </div>
             </div>
             <div class="scan-field" *ngIf="selected=='Not exist'">
