--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -51,6 +51,14 @@
                         <span>Synchronisation</span>
                     </div>
             </mat-list-item>
+
+            <mat-list-item routerLink="deleteRequests" routerLinkActive="active" *ngIf="user.role== 'Admin'">
+                <mat-icon mat-list-icon>auto_delete</mat-icon>
+                <div fxFlex="10"></div>
+                <div *ngIf="sidenavWidth> 6" class="sidenav-item">
+                    <span>Delete Requests</span>
+                </div>
+            </mat-list-item>
             
             <mat-list-item routerLink="settings" routerLinkActive="active" *ngIf="user.role== 'Admin'">
                 <mat-icon mat-list-icon>settings</mat-icon>
